--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ PRODUCT_ID='prod_OuvPiBUuhNuemK'
 PRICE_ID='price_1O75YbAtkvkkH2vrVBAGjXZ6'
 EMAIL_PASSWORD='jjjv qllg fkwj psxz'
 EMAIL_USER='williamvelichko2003@gmail.com'
+PORT=4000
 #STRIPE_SECRET_TEST='price_1O75YbAtkvkkH2vrVBAGjXZ6'
